@@ -10,7 +10,7 @@
 % the rest is at your discretion.
 \authoraddress{E-mail: \email{djc@object-craft.com.au}}
 
-\release{0.38pre2}
+\release{0.39pre1}
 \date{February 02, 2007}
 
 \makeindex			% tell \index to actually write the .idx file
